--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
              </label>
     
             <ul>
-                <li><a href="https://youtube.com/mikbrito" target="_blank">📹 Youtube</a></li>
-                <li><a href="https://youtube.com/mikbrito" target="_blank">📷 Instagram</a></li>
-                <li><a href="https://youtube.com/mikbrito" target="_blank">🐦 Twitter</a></li>
-                <li><a href="https://youtube.com/mikbrito" target="_blank">🐱 Github</a></li>
+                <li><a href="https://github.com/ValdeirBarbosa" target="_blank">📹 Youtube</a></li>
+                <li><a href="https://github.com/ValdeirBarbosa" target="_blank">📷 Instagram</a></li>
+                <li><a href="https://github.com/ValdeirBarbosa" target="_blank">🐦 Twitter</a></li>
+                <li><a href="https://github.com/ValdeirBarbosa" target="_blank">🐱 Github</a></li>
             </ul>
             <footer>Feito com ❤️ pela <a href="https://rocketseat.com.br" target="_blank" >Rocketseat</a></footer>
      </div>
